--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URL=mongodb+srv://root:toor@expressdbs.edl9b.mongodb.net/issue-tracker-db?retryWrites=true&w=majority
-MONGODB_LOCAL=mongodb://localhost/fish-tracker-db-local
+MONGODB_LOCAL=mongodb+srv://localhost:27017
 ACCESS_TOKEN_SECRETE=fish-tracker
 REFRESH_TOKEN_SECRETE=fish-tracker-refresh
 PORT=4334
